Fix website on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -778,6 +778,7 @@ table tfoot td {
   top: 20px;
   width: 240px;
   padding: 10px 10px;
+  margin-left: 20px;
   background-color: #ffffff; }
 
 .about {
@@ -807,12 +808,11 @@ table tfoot td {
     font-weight: 600; }
   .about p {
     font-size: 16px;
-    margin: 20px 0 20px;
-    text-align: justify; }
+    margin: 20px 0 20px; }
 
 .content-box {
   padding: 20px;
-  padding-left: 260px;
+  padding-left: 280px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -1068,7 +1068,12 @@ a.newer-posts:hover {
     width: 100%;
     padding: 10px;
     background-color: #ffffff;
-    box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15); }
+    box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+    margin-left: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    bottom: 0;
+    top: 0; }
     .sidebar footer {
       margin-bottom: 10px; }
 
@@ -1077,8 +1082,8 @@ a.newer-posts:hover {
     max-width: 480px;
     margin: 10px auto auto; }
     .about img {
-      width: 100px;
-      height: 100px;
+      width: 150px;
+      height: 150px;
       border-radius: 100%;
       margin-bottom: 10px; }
 
