--- a/assets/css/scss/_media.scss
+++ b/assets/css/scss/_media.scss
@@ -33,6 +33,11 @@
     padding: 10px;
     background-color: #ffffff;
     box-shadow: 0 1px 1px 0 rgba(31, 35, 46, .15);
+	margin-left: 0;
+	padding-bottom: 0;
+	margin-bottom: 0;
+	bottom: 0;
+	top: 0;
 
     footer {
       margin-bottom: 10px;
@@ -44,8 +49,8 @@
     max-width: 480px;
     margin: 10px auto auto;
     img {
-      width: 100px;
-      height: 100px;
+      width: 150px;
+      height: 150px;
       border-radius: 100%;
       margin-bottom: 10px;
     }
