--- a/assets/css/scss/parts/_home-page.scss
+++ b/assets/css/scss/parts/_home-page.scss
@@ -7,6 +7,7 @@
   top: 20px;
   width: 240px;
   padding: 10px 10px;
+  margin-left: 20px;
   background-color: $white;
 }
 .about {
@@ -41,12 +42,11 @@
   p {
     font-size: 16px;
     margin: 20px 0 20px;
-	text-align: justify;
   }
 }
 .content-box {
   padding: 20px;
-  padding-left: 260px;
+  padding-left: 280px;
 
   display: flex;
   flex-direction: row;
